Implementation of Series Category, Series, Season and Episodes retrieval and persistence

--- a/XtreamJson/src/main/resources/application.properties
+++ b/XtreamJson/src/main/resources/application.properties
@@ -1,14 +1,7 @@
-spring.datasource.url=jdbc:h2:file:./data/xtreamdb
+spring.datasource.url=jdbc:h2:file:./data/xtreamdb;AUTO_SERVER=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
-# xtream.api-url=http://cf.tvuhd.site
-# xtream.username=6c501c0bea66
-# xtream.password=f72eb64ae0
-
-xtream.api-url=http://line.smart-ultra.cc
-xtream.username=5C2974
-xtream.password=6A7602
