--- a/XtreamJson/pom.xml
+++ b/XtreamJson/pom.xml
@@ -13,6 +13,7 @@
 
 	<properties>
 		<java.version>25</java.version>
+		<log4j.version>2.25.2</log4j.version>
 	</properties>
 
 	<parent>
@@ -116,6 +117,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			</dependency>
 		<!-- Add other dependencies if needed -->
 		<dependency>
 			<groupId>io.astefanutti.metrics.aspectj</groupId>
