--- a/XtreamJson/src/main/resources/application.properties
+++ b/XtreamJson/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.order_updates=true
 # Reduce Hibernate overhead
 spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.open-in-view=false
+
+task.schedule.cron=0 0 2 * * ?
