--- a/XtreamJson/pom.xml
+++ b/XtreamJson/pom.xml
@@ -13,17 +13,23 @@
 
 	<properties>
 		<java.version>25</java.version>
-		<log4j.version>2.25.2</log4j.version>
+		<log4j.version>3.0.0-beta3</log4j.version>
 	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.5.7</version>
+		<version>4.0.0</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+
 		<!-- javax.json for JSON processing -->
 		<dependency>
 			<groupId>javax.json</groupId>
@@ -120,11 +126,11 @@
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			</dependency>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			</dependency>
+		</dependency>
 		<!-- Add other dependencies if needed -->
 		<dependency>
 			<groupId>io.astefanutti.metrics.aspectj</groupId>
