--- a/XtreamJson/pom.xml
+++ b/XtreamJson/pom.xml
@@ -55,6 +55,10 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
 
 		<!-- Lombok for automatic getters/setters -->
 		<dependency>
