feat: Integrate TMDB service for movie summaries with caching and remove unused static files.

--- a/XtreamJson/src/main/resources/application.properties
+++ b/XtreamJson/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.jpa.properties.hibernate.generate_statistics=false
 spring.jpa.open-in-view=false
 
 task.schedule.cron=0 0 2 * * ?
+
+# TMDB Configuration
+tmdb.api.key=ece01dd1bcf176689f3ea0a8d051c744
+
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.cache-names=tmdbSummaries
+spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=60m
