--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,7 @@
 XstreamJson.log
 .vscode/settings.json
-data/xtreamdb.mv.db
 XtreamJson/.classpath
 XtreamJson/.classpath
 XtreamJson/.factorypath
-data/xtreamdb.lock.db
-hls_output
-data/xtreamdb.lock.db
+hls_output/
+data/
