feat: Enhance EPG download, enable SSL/HTTP2, and update gitignore
- Update EpgService to use a temporary file for downloads and increase timeouts.
- Configure SSL, HTTP/2, and CORS support.
- Add exclusions to .gitignore for data and media files.

--- a/XtreamJson/src/main/resources/application.properties
+++ b/XtreamJson/src/main/resources/application.properties
@@ -24,3 +24,11 @@ tmdb.api.key=ece01dd1bcf176689f3ea0a8d051c744
 spring.cache.type=caffeine
 spring.cache.cache-names=tmdbSummaries
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=60m
+
+# Server and SSL Configuration
+server.port=8443
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=password
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=xtreamjson
+server.http2.enabled=true
