--- a/XtreamJson/pom.xml
+++ b/XtreamJson/pom.xml
@@ -12,7 +12,7 @@
 	<description>A Java project for handling Xtream API</description>
 
 	<properties>
-		<java.version>25</java.version>
+		<java.version>17</java.version>
 		<log4j.version>3.0.0-beta3</log4j.version>
 	</properties>
 
@@ -160,6 +160,14 @@
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -189,26 +197,7 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-toolchains-plugin</artifactId>
-				<version>3.2.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>toolchain</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<toolchains>
-						<jdk>
-							<version>25</version>
-							<vendor>any</vendor>
-						</jdk>
-					</toolchains>
-				</configuration>
-			</plugin>
+
 
 		</plugins>
 	</build>
