Various change including new login page and enhanced seek capabilities  when playing media

--- a/XtreamJson/src/main/resources/application.properties
+++ b/XtreamJson/src/main/resources/application.properties
@@ -25,6 +25,11 @@ spring.cache.type=caffeine
 spring.cache.cache-names=tmdbSummaries
 spring.cache.caffeine.spec=maximumSize=500,expireAfterWrite=60m
 
+# Proxy Configuration
+# proxy.allowed-hosts=example.com,cdn.example.com,.trusted-cdn.com
+proxy.allowed-schemes=http,https
+proxy.block-private-ips=true
+
 # Server and SSL Configuration
 server.port=8443
 server.ssl.key-store=classpath:keystore.p12
