--- a/XtreamJson/pom.xml
+++ b/XtreamJson/pom.xml
@@ -12,8 +12,11 @@
 	<description>A Java project for handling Xtream API</description>
 
 	<properties>
-		<java.version>17</java.version>
-		<log4j.version>3.0.0-beta3</log4j.version>
+		<java.version>21</java.version>
+		<log4j.version>2.25.3</log4j.version>
+		<maven.compiler.source>21</maven.compiler.source>
+		<maven.compiler.target>21</maven.compiler.target>
+		<maven.compiler.release></maven.compiler.release>
 	</properties>
 
 	<parent>
@@ -30,16 +33,17 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
-		<!-- javax.json for JSON processing -->
+		<!-- jakarta.json for JSON processing (Jakarta EE 11) -->
 		<dependency>
-			<groupId>javax.json</groupId>
-			<artifactId>javax.json-api</artifactId>
-			<version>1.1.4</version>
+			<groupId>jakarta.json</groupId>
+			<artifactId>jakarta.json-api</artifactId>
+			<version>2.1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>org.glassfish</groupId>
-			<artifactId>javax.json</artifactId>
-			<version>1.1.4</version>
+			<groupId>org.eclipse.parsson</groupId>
+			<artifactId>parsson</artifactId>
+			<version>1.1.7</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!-- Jackson Databind for ObjectMapper -->
@@ -186,11 +190,10 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.14.1</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
-					<fork>true</fork>
-					<executable>/usr/bin/javac</executable>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
